[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Platforms/fallingblock3Outline.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Platforms/fallingblock3.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 3.33334 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12, 1 )

[node name="FallingPlatform3" type="Node2D" index="0"]

position = Vector2( 208, 158 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Outline" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="RespawnPoint" type="Position2D" parent="." index="1"]

[node name="RespawnCooldown" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="ShakeTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TweenElevator" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="Platform" type="StaticBody2D" parent="." index="5"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="Platform" index="0"]

scale = Vector2( 1.2, 1.2 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Platform" index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="6"]

position = Vector2( 0, 8 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, -12 )
scale = Vector2( 1, 0.1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="RespawnCooldown" to="." method="_on_RespawnCooldown_timeout"]

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]

[connection signal="tween_completed" from="TweenElevator" to="." method="_on_Tween_tween_completed"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


